--- a/BelopetRepet/pages/sobre-nos/sobre_nos.css
+++ b/BelopetRepet/pages/sobre-nos/sobre_nos.css
@@ -13,7 +13,7 @@ body {
   left: 0;
   width: 100%;
   height: 70px; /* altura fininha */
-  background-color: #567ebb;
+  background-color: #75a2e7;
   display: flex;
   align-items: center;
   justify-content:flex-start; /* distribui com espaçamento */
